# metadataセクションではパッケージのメタデータを定義する
# これらの値はpypiで公開した際に表示される。
# なおversion等、一部のキーはディレクティブの指定により外部ファイルから値を取得することができる
# https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name = candypi
version = 0.1.0
license = LICENSE
description = Continuous Delivery tool for raspberry pi project
long_description = file: index.rst
author = tiwa


# optionsセクションではパッケージの依存関係やpip installした時の動作を定義する
# 値が複数ある場合、インデントすることで1行に1つの値を書くことができる。
# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
[options]
install_requires =
    flask
    gitpython
packages = find:

# optionの内、値のTypeがsectionのものは別セクションで記述する。
# [options.extras_require]
# develop =

[options.entry_points]
console_scripts = 
    candypi = app:main

[tool:pytest]
testpaths = ./tests
python_files = test_*.py
python_classes = Test
python_functions = test_
